linter update, add update circle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,29 @@
+---
 version: 2.1
 
-jobs:
-  build:
+executors:
+  go:
     docker:
       - image: circleci/golang:1.16
+  golangcilint:
+    docker:
+      - image: golangci/golangci-lint:v1.38.0
+
+jobs:
+  lint:
+    executor: golangcilint
+    steps:
+      - checkout
+      - run: make lint
+
+  build:
+    executor: go
+    steps:
+      - checkout
+      - run: make build
+
+  test:
+    executor: go
     steps:
       - checkout
       - run:
@@ -13,8 +33,10 @@ jobs:
           name: Upload coverage to Codecov
           command: bash <(curl -s https://codecov.io/bash)
 
-workflow:
-  version: 2.1
-  build-test:
+workflows:
+  version: 2
+  all_the_things:
     jobs:
+      - lint
       - build
+      - test
